Fixes: 	- removed the "/" in front of images src 	- fixed issue with web page not being contained in the screen width on mobile screens 	- removed unnecessary comments

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@
 html {
   scroll-behavior: smooth;
 }
+body, html {
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
 
 body {
   font-family: var(--font-body);
@@ -41,6 +44,10 @@ body {
   background-color: var(--primary-color2);
 }
 
+.web-container {
+  max-width: 100vw; /* Restrict container width */
+  box-sizing: border-box; /* Ensures padding doesn’t cause overflow */
+}
 header {
   display: flex;
   justify-content: space-between;
